--- a/p8105_final_gk2501_jr3755_ly2428_rz2375.Rmd
+++ b/p8105_final_gk2501_jr3755_ly2428_rz2375.Rmd
@@ -172,39 +172,32 @@ rest_neighborhood = left_join(rest_inspection, zip_neighbor, by = "zipcode") %>%
 The health data we achieved is very well-structured. We make plots to see the distribution of the three chronic disease outcomes across neighorhoods.
 
 ```{r neighborhood_summary}
-health_only_neighborhood <- health[-c(1:6),] %>% 
+health_outcome <- health[-c(1:6),] %>% 
   rename(neighborhood = name) %>% 
-  mutate(neighborhood = as.factor(neighborhood))
+  mutate(neighborhood = as.factor(neighborhood)) %>% 
+  select(neighborhood,obesity,diabetes,stroke_hosp) %>% 
+  gather(key = outcomes, value = rate, obesity:stroke_hosp) 
 
-##Plotting for outcome in different neighborhood
-bar_obe <- health_only_neighborhood %>%
-  mutate(neighborhood = fct_reorder(neighborhood, obesity)) %>% 
-  filter(obesity > 25) %>% 
-  ggplot(aes(x = neighborhood,y = obesity, fill = neighborhood)) + geom_col() +  
-  theme(axis.text.x = element_text(angle = 45, hjust = 1), 
-        legend.position = "none") +
-  labs(title = "Neighborhood with 25 percent or more obesity rate")
+##Plotting box plot for neighborhood outcomes 
+boxplot_ob_dia <- health_outcome %>% 
+  rename(percentage = rate) %>% 
+  filter(outcomes == c("obesity","diabetes")) %>% 
+  ggplot(aes(x = outcomes, y = percentage)) + geom_boxplot() + 
+  geom_point(aes(color = neighborhood)) + theme(legend.position = "none") +
+  labs(title = "Percentage of diabetes and obesity")
 
-bar_dia <- health_only_neighborhood %>%
-  mutate(neighborhood = fct_reorder(neighborhood, diabetes)) %>% 
-  filter(diabetes > 10) %>% 
-  ggplot(aes(x = neighborhood,y = diabetes, fill = neighborhood)) + geom_col() +   
-  theme(axis.text.x = element_text(angle = 45, hjust = 1), 
-        legend.position = "none") +
-  labs(title = "Neighborhood with 10 percent or more diabetes rate")
+plotly_ob_dia <- ggplotly(boxplot_ob_dia)
 
-bar_stro <- health_only_neighborhood %>%
-  mutate(neighborhood = fct_reorder(neighborhood, stroke_hosp)) %>% 
-  filter(stroke_hosp > 300) %>% 
-  ggplot(aes(x = neighborhood,y = stroke_hosp, fill = neighborhood)) + 
-  geom_col() +    
-  theme(axis.text.x = element_text(angle = 45, hjust = 1), 
-        legend.position = "none") +
-  labs(title = "Neighborhood with 300 or more stroke hospitalization in 100,000 adults")
+boxplot_stroke <- health_outcome %>% 
+  filter(outcomes == "stroke_hosp") %>% 
+  ggplot(aes(x = outcomes, y = rate)) + geom_boxplot() + 
+  geom_point(aes(color = neighborhood)) + theme(legend.position = "none") +
+  labs(title = "Obesity and diabetes percentage    
+       Rate of hospitalizations per 100,000 adults")
 
-ggplotly(bar_obe)
-ggplotly(bar_dia)
-ggplotly(bar_stro)
+plotly_stroke <- ggplotly(boxplot_stroke)
+
+subplot(hide_legend(plotly_ob_dia),hide_legend(plotly_stroke))
 ```
   
 Williamsbridge and Baychester have the highest obesity rate, up to 32%. East New York and Starrett City have the highest diabetes rate, up to 17 percent. Bushwick has the highest stroke hospitalization in 100,000 adults, up to 300 adults. Morrisania and Crotona has the highest percent of poverty rate, up to 40%, while Fiancial district has the highest percent of young peoeple, up to 67% (graphs for covariates not shown).
